tests/paczka1/fuzzy1/41691552.err
Error in line 8: 2eiUDEF A905 41,9
Error in line 14: aOWaNaA A224 50,8
Error in line 26: 2eiUDEF A224 35,88
Error in line 20: 2eiUDEF S71 45,9
Error in line 30: 2eiUDEF A224 168,6
Error in line 24: aOWaNaA S521 41,7
Error in line 35: aOWaNaA A905 20,2
